# home-ops

./: .chezmoiignore  .chezmoiroot  .editorconfig  .env  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  .sdkmanrc  .tool-versions  Dockerfile  README.md  Taskfile.yaml  Taskfile.yml  eslint.config.js  home-ops.code-workspace  home-ops.sqlite  install.sh  jest.config.mts  jest.config.todo  main.mts  migrations.json  nx.json  package-lock.json  package.json  pyproject.toml  sea-config.json  tsconfig.base.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Writerside/: ho.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: README.md
Writerside/topics/config/: setup.md
Writerside/topics/scripts/: scripts_README.md
apps/: apps.yaml
apps/.github/workflows/: build-docs.yml
apps/backend/: .eslintrc.json  jest.config.ts  package-lock.json  package.json  project.json  tsconfig.app.json  tsconfig.spec.json
apps/backend/config/: default.toml
apps/backend/e2e/: example.spec.mts
apps/backend/src/: main.mts  main.spec.ts  main.ts
apps/omlette/: Dockerfile  project.json
apps/omlette/src/: main.mts
apps/watchyourlan-api/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  watchyourlan-api.yaml
apps/watchyourlan-api-e2e/: jest.config.ts  project.json
apps/watchyourlan-api/e2e/: example.spec.mts
apps/watchyourlan-api/src/: init.mts  main.mts  server.mts
config/: default.toml  default.zshrc  dev.toml  logback-spring.xml  prod.toml  production.toml  setup.md  stage.toml
config/apps/: project.tmpl.json
libs/omelette/: README.md  package.json  project.json  tsconfig.lib.json
libs/omelette-lib/: project.json
libs/omelette/src/: index.mts
libs/pyshared/: project.json  pyproject.toml
libs/pyshared/resources/: ansible.py  core.py  paths.py
libs/pyshared/tests/: test_resources.py
libs/shared/: package-lock.json  package.json  project.json  tsconfig.lib.json
libs/shared/log/: jest.config.todo  package-lock.json  package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/shared/pkg-install/: README.md  jest.config.ts  package-lock.json  package.json  project.json  tsconfig.lib.json
libs/shared/utils/: jest.config.ts  (+5 more)
libs/watchyourlan-api/: package.json  project.json  tsconfig.lib.json  tsconfig.spec.json
pyapps/: pyapps.yaml
pyapps/ansible/: project.json  pyproject.toml
pyapps/ansible-commands/: ansible-commands.yaml  project.json  pyproject.toml
pyapps/trapper-keeper/: .coverage  README.md  Taskfile.yaml  config.toml  project.json  pyproject.toml  trapper-keeper.yaml
pylibs/: pylibs.yaml
pylibs/homeops-inventory/: README.md  project.json  pyproject.toml
pylibs/homeops-utils/: project.json  pyproject.toml
pylibs/resources/: project.json  pyproject.toml  resources.yaml
pylibs/utils/: project.json  pyproject.toml  utils.yaml
scripts/: README.md  import-meta-url.polyfill.mjs  main.ts  mocha_runner.mts  package-lock.json  package.json  project.json  scripts.yaml  settings.mjs  smoke-test.mts  tsconfig.app.json
scripts/.taskfiles/: install.yaml  validate.yaml
scripts/ansible/: ansible.cfg  ansible.yaml  inventory.yaml  pyproject.toml
scripts/ansible/collections/: requirements.yml
scripts/ansible/playbooks/: proxmox_update.yaml
scripts/ansible/playbooks/docker/: autoplex.yaml
scripts/ansible/playbooks/info/: systeminformation.yaml
scripts/ansible/roles/: requirements.yml
scripts/docker/: docker.yaml
scripts/jbang-catalog/: BootstrapRunner.java  ExecRunner.java  UploadFileApp.java  jbang-catalog.json
scripts/nodejs/: README.md  main.mts  package-lock.json  package.json  sysupdate.mts  tsconfig.base.json
scripts/python/: Taskfile.py.yaml  pyproject.toml  trapper-keeper.py
scripts/shell/: build.sh  install.sh
scripts/spring-cli/: build.gradle
scripts/taskfiles/: ansible.yaml  chezmoi.yaml  deploy.yaml  git.yaml  install.yaml  keepassxc.yaml  lint.yaml  mcv.yaml  test.yaml  unison.yaml  validate.yaml
scripts/zx/: Taskfile.zx.yaml  bunfig.toml  confirm_install.mts  gh.mts  ghcli.mts  main.mts  package-lock.json  package.json  project.json  sea-config.json  sysupdate.mts  tsconfig.json  vscode.mts
src/: main.mts  mcv.yaml
(+188 files in other folders)
