[tool.poetry]
name = "home-ops"
version = "0.1.0"
description = ""
authors = [ "Jeremy Hettenhouser <jhettenh@gmail.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = "^3.12"

    [tool.poetry.dependencies.technohouser]
    path = "libs/pyshared"
    develop = true

[tool.poetry.group.dev.dependencies]
ruff = "0.1.5"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
