[project]
name = "ansible-scripts"
version = "0.1.0"
description = "Ansible Scripts"
authors = [
    {name = "borland502",email = "jhettenh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=11.2.0,<12.0.0)",
    "ansible-lint (>=25.1.1,<26.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

